[queues] use quorum queues, housekeeping