@@ -45,7 +45,7 @@ This is intended as the coherent gateway for the Bob cluster having the schema c
 
 ### Ways of connecting APIServer to the cluster
 - To build an uberjar run `bb compile` to obtain an `apiserver.jar`. Running `java -jar apiserver.jar` should connect to it all nicely.
-- To run directly without building a JAR, run `clj -M -m apiserver_next.main` from this dir.
+- To run directly without building a JAR, run `clojure -J--enable-preview -M -m apiserver.main` from this dir.
 
 ## Setting up the dev environment with the REPL
 - This uses [Integrant](https://github.com/weavejester/integrant) to manage state across the app.
