@@ -42,7 +42,7 @@ This provides a general enough, isolated and ephemeral execution environment. Ea
 
 ### Ways of connecting Runner to the cluster
 - To build an uberjar run `bb compile` to obtain a `runner.jar`. Running `java -jar runner.jar` should connect to it all nicely.
-- To run directly without building a JAR, run `clj -M -m runner.main` from this dir.
+- To run directly without building a JAR, run `clojure -J--enable-preview -M -m runner.main` from this dir.
 
 ## Setting up the dev environment with the REPL
 - This uses [Integrant](https://github.com/weavejester/integrant) to manage state across the app.
